<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/megaways_game_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/chose_credit"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_back"
        android:gravity="center" >

        <TextView
            android:id="@+id/btn_100"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient_btn"
            android:gravity="center"
            android:text="@string/_100"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btn_200"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient_btn"
            android:gravity="center"
            android:text="@string/_200"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btn_300"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gradient_btn"
            android:gravity="center"
            android:text="@string/_300"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>